--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,13 +8,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
         </div>
-
+        
         <HorizontalCard
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/EDCs.webp"
           desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
-           url="p1"
+          id="p1" 
+          url="/p1/"
         />
+        
         <div class="divider my-0"></div>
         <HorizontalCard
         title="Sex dimorphism and temporal dynamics of the tanycyte connectome according to changes in metabolic state"
